--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
                                 <div class="card-body p-0">
                                     <div class="d-flex align-items-center">
                                         <div class="p-5">
-                                            <h2 class="fw-bolder">Pothole Mapping Internet of Things</h2>
+                                            <h2 class="fw-bolder">IoT-Based System for Pothole Mapping</h2>
                                             <p>We developed a sensor that can detect road damage, record location points, classify the level of road damage, and display road damage information on the user application. For the development kit, we used the ADXL345 accelerometer sensor, Arduino Nano ESP 8266, Ublox Neo-6M GPS, and Raspberry Pi 3b+ Broadcom BCM2837B0 CPU. For the mobile application, we used Flutter as the end-user and Firebase as the database.</p>
                                         </div>
                                         <img class="img-fluid" src="assets/img/IoT-Mapping4.jpeg" alt="..." />
