--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>秋の詩 - Aki no Uta</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles2.css">
 </head>
 <body>
     <!-- Background Elements -->
@@ -228,6 +228,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/script2.js"></script>
 </body>
 </html>
